<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.chatchatabc</groupId>
    <artifactId>parking-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Parent for parking project</name>
    <description>Parking project parent with Spring Boot</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <kotlin.version>1.8.21</kotlin.version>
        <spring-boot.version>3.1.0</spring-boot.version>
        <jnats.version>2.16.11</jnats.version>
        <jackson.version>2.15.1</jackson.version>
        <junit5.version>5.9.3</junit5.version>
        <testcontainers.version>1.18.1</testcontainers.version>
        <database-rider.version>1.37.1</database-rider.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
    </properties>

    <modules>
        <module>parking-admin</module>
        <module>parking-api</module>
        <module>parking-domain</module>
        <module>parking-web-common</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:chatchatabc/parking-backend-spring.git</connection>
        <developerConnection>scm:git:git@github.com:chatchatabc/parking-backend-spring.git</developerConnection>
        <url>https://github.com/chatchatabc/parking-backend-spring</url>
    </scm>

    <developers>
        <developer>
            <id>Raphile14</id>
            <name>Raphael Dalangin</name>
            <roles>
                <role>Developer</role>
            </roles>
            <organizationUrl>https://github.com/chatchatabc</organizationUrl>
        </developer>
        <developer>
            <id>linux_china</id>
            <name>Jacky Chan</name>
            <roles>
                <role>Developer</role>
            </roles>
            <organizationUrl>https://github.com/chatchatabc</organizationUrl>
        </developer>
        <developer>
            <id>audreycj</id>
            <name>Audrey Nanual</name>
            <roles>
                <role>Developer</role>
            </roles>
            <organizationUrl>https://github.com/chatchatabc</organizationUrl>
        </developer>
    </developers>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junit5.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.jetbrains.kotlin</groupId>
                <artifactId>kotlin-bom</artifactId>
                <version>${kotlin.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.nats</groupId>
                <artifactId>jnats</artifactId>
                <version>${jnats.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <parameters>true</parameters>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0</version>
                    <configuration>
                        <includes>
                            <include>**/*Tests.java</include>
                            <include>**/*Test.java</include>
                        </includes>
                        <excludes>
                            <exclude>**/Abstract*.java</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <executions>
                        <execution>
                            <id>repackage</id>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>